Revert "fix 986: tooltip default width, alignment (#1032)"
This reverts commit 9018081617e8087d4a1a9babd3db1a7a2611f0ff.

--- a/src/Tooltip/TooltipContent.scss
+++ b/src/Tooltip/TooltipContent.scss
@@ -20,7 +20,6 @@ $shadow: 0 6px 6px 0 rgba(22, 45, 60, 0.06), 0 0 18px 0 rgba(22, 45, 60, 0.12);
   display: inline-block;
   border-radius: $border-radius;
   padding: $padding;
-  box-sizing: border-box;
   font-size: $font-size;
   line-height: $line-height;
   box-shadow: $shadow;
